contenedores-kubernetes-leosilva/k8s/svc_flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
