contenedores-kubernetes-leosilva/k8s/svc_redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-svc
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
