contenedores-kubernetes-leosilva/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: flask.34-132-94-3.nip.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: flask-svc
            port:
              number: 5000
